--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <!-- partial:index.partial.html -->
 <div class="container right-panel-active">
 	<!-- Sign Up -->
+	<!-- demo text -->
 	<div class="container__form container--signup">
 		<form action="#" class="form" id="form1">
 			<h2 class="form__title">რეგისტრაცია</h2>
@@ -21,6 +22,8 @@
 		</form>
 	</div>
 
+
+	
 	<!-- Sign In -->
 	<div class="container__form container--signin">
 		<form action="#" class="form" id="form2">
